fix overlapping issue

--- a/src/features/donations/styles/DirectGift.module.scss
+++ b/src/features/donations/styles/DirectGift.module.scss
@@ -15,6 +15,7 @@
   border-radius: 8px;
   box-shadow: 0px 3px 6px #00000029;
   padding: 10px 20px;
+  z-index: 2;
   //   border: 2px solid #d1d1d1;
 }
 
